--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design | HealthCare</title>
+    <title>CodeNix | HealthCare</title>
   </head>
   <body>
     <header>
