--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       </div>
       <div class="footer__bar">
         <div class="footer__bar__content">
-          <p>Website Host (Team CodeNix) Members : Soumojeet Mondal, Rohan Karak, Mani Sankar Pandit, Diganta Maity. All rights reserved.</p>
+          <p>Website Host [Team CodeNix] Members : Soumojeet Mondal, Rohan Karak, Mani Sankar Pandit, Diganta Maity. All rights reserved.</p>
           <div class="footer__socials">
             <span><i class="ri-instagram-line"></i></span>
             <span><i class="ri-facebook-fill"></i></span>
