--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <div class="footer__col">
           <h4>Contact Us</h4>
           <p>
-            <i class="ri-map-pin-2-fill"></i> 123, Kolkata Newtown, West Bengal
+            <i class="ri-map-pin-2-fill"></i> 123, Newtown, Kolkata, West Bengal
           </p>
           <p><i class="ri-mail-fill"></i> helphealthcare@123gmail.com</p>
           <p><i class="ri-phone-fill"></i> (+91) 3456 789 765</p>
